[package]
name = "chrondb-node"
version = "0.2.1"
edition = "2021"
description = "Node.js bindings for ChronDB via NAPI-RS"
license = "AGPL-3.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrondb = { path = "../rust" }
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
