[project]
name = "chrondb"
dynamic = ["version"]
description = "Python client for ChronDB — a time-traveling key/value database"
license = { text = "AGPL-3.0" }
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["chrondb*"]

[tool.setuptools.package-data]
chrondb = ["*.so", "*.dylib", "_generated/*.so", "_generated/*.dylib", "lib/*.so", "lib/*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
