[package]
name = "chrondb-uniffi"
version = "0.2.1"
edition = "2021"
description = "UniFFI bindings for ChronDB — generates Python, Ruby, Kotlin, Swift"
license = "AGPL-3.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "chrondb_uniffi"

[dependencies]
chrondb = { path = "../rust" }
uniffi = { version = "0.29", features = ["cli"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
